[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-gen-ai"
version = "0.1.0"
description = "LLM-powered question answering and document generation agents with enhanced accuracy"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "Madhu Kanukula"}
]
keywords = ["llm", "ai", "question-answering", "document-generation", "llama", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "accelerate>=0.20.0",
    "ddgs>=9.9.1",
    "h5py>=3.9.0",
    "huggingface-hub>=0.17.3",
    "keras>=2.13.1",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-core>=0.1.0",
    "langgraph>=0.1.0",
    "python-docx>=1.0.0",
    "tensorflow>=2.13.0",
    "tokenizers>=0.13.3",
    "torch>=2.0.1",
    "transformers>=4.33.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[project.scripts]
llm-qa = "llm_gen_ai.agents.basic_qa_agent:main"
llm-qa-enhanced = "llm_gen_ai.agents.enhanced_qa_agent:main"

[project.urls]
Homepage = "https://github.com/madhu1/llm-gen-ai"
Repository = "https://github.com/madhu1/llm-gen-ai"
Issues = "https://github.com/madhu1/llm-gen-ai/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["llm_gen_ai*"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

